# EA_IPM

./: CMakeLists.txt  README.md
data/: sample1_imu.txt  sample2_imu.txt  sample3_imu.txt
include/: IPMManager.h
src/: IPMManager.cpp  main.cpp
